画像をPNGから256色BMPにしてみた しかし画面のちらつきの原因はそれではなさそう

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -120,9 +120,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\alien.bmp" />
     <Content Include="Resources\alien.png" />
+    <Content Include="Resources\fighter.bmp" />
     <Content Include="Resources\fighter.png" />
     <Content Include="Resources\shield.png" />
+    <Content Include="Resources\shot.bmp" />
     <Content Include="Resources\shot.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
