敵の移動とショット

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -122,8 +122,10 @@
   <ItemGroup>
     <Content Include="Resources\alien.bmp" />
     <Content Include="Resources\alien.png" />
+    <Content Include="Resources\e_shot.bmp" />
     <Content Include="Resources\fighter.bmp" />
     <Content Include="Resources\fighter.png" />
+    <Content Include="Resources\shield.bmp" />
     <Content Include="Resources\shield.png" />
     <Content Include="Resources\shot.bmp" />
     <Content Include="Resources\shot.png" />
