ワープマンの音楽をピアノで弾いてみた！

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -130,6 +130,7 @@
     <Content Include="Resources\shield.png" />
     <Content Include="Resources\shot.bmp" />
     <Content Include="Resources\shot.png" />
+    <Content Include="Resources\wpm001.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
