--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -132,6 +132,7 @@
     <Content Include="Resources\shot.bmp" />
     <Content Include="Resources\shot.png" />
     <Content Include="Resources\shot.wav" />
+    <Content Include="Resources\shot02.wav" />
     <Content Include="Resources\wpm001.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
