爆発音のバッファを増やした

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -123,6 +123,7 @@
     <Content Include="Resources\alien.bmp" />
     <Content Include="Resources\alien.png" />
     <Content Include="Resources\bomb.wav" />
+    <Content Include="Resources\bomb02.wav" />
     <Content Include="Resources\e_shot.bmp" />
     <Content Include="Resources\fighter.bmp" />
     <Content Include="Resources\fighter.png" />
