解像度1377x768対応（大きい画面で遊んでね！）

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -128,6 +128,7 @@
     <Content Include="Resources\fighter.bmp" />
     <Content Include="Resources\fighter.png" />
     <Content Include="Resources\galaxy.bmp" />
+    <Content Include="Resources\galaxy_l.bmp" />
     <Content Include="Resources\shield.bmp" />
     <Content Include="Resources\shield.png" />
     <Content Include="Resources\shot.bmp" />
