--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -129,6 +129,7 @@
     <Content Include="Resources\fighter.png" />
     <Content Include="Resources\galaxy.bmp" />
     <Content Include="Resources\galaxy_l.bmp" />
+    <Content Include="Resources\galaxy_l.png" />
     <Content Include="Resources\shield.bmp" />
     <Content Include="Resources\shield.png" />
     <Content Include="Resources\shot.bmp" />
