--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -24,6 +24,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>ShootingBasic.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -135,8 +136,13 @@
     <Content Include="Resources\shot.bmp" />
     <Content Include="Resources\shot.png" />
     <Content Include="Resources\shot.wav" />
+    <Content Include="Resources\shot001.wav" />
     <Content Include="Resources\shot02.wav" />
+    <Content Include="Resources\shot03.wav" />
+    <Content Include="Resources\shot04.wav" />
+    <Content Include="Resources\shot05.wav" />
     <Content Include="Resources\wpm001.wav" />
+    <Content Include="Resources\yarare.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
