ショットと画面を細くしてUFOを追加

--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -145,6 +145,8 @@
     <Content Include="Resources\shot03.wav" />
     <Content Include="Resources\shot04.wav" />
     <Content Include="Resources\shot05.wav" />
+    <Content Include="Resources\ufo.bmp" />
+    <Content Include="Resources\ufo.png" />
     <Content Include="Resources\wpm001.wav" />
     <Content Include="Resources\yarare.wav" />
   </ItemGroup>
