--- a/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
+++ b/ShootingBasic/ShootingBasic/ShootingBasic.vbproj
@@ -136,6 +136,7 @@
     <Content Include="Resources\galaxy_l.bmp" />
     <Content Include="Resources\galaxy_l.png" />
     <Content Include="Resources\galaxy_red.png" />
+    <Content Include="Resources\galaxy_title.png" />
     <Content Include="Resources\shield.bmp" />
     <Content Include="Resources\shield.png" />
     <Content Include="Resources\shot.bmp" />
